12-4-2007: Rotation - Generalized new rendering strategy for rotation platform opening panel
12-4-2007: Rotation - Fixed: Handbrake doesn't move on playback
12-4-2007: Rotation - added a trial implementation for mass graphic
12-3-2007: Rotation - Fixed: memory problem in DefaultTimeSeries when recording for a long time
12-1-2007: Rotation - Added an introductory panel.
11-29-2007: Rotation - Changed label colors for checkboxes
11-27-2007: Rotation - Fixed high-priority memory leaks
11-27-2007: Torque - Fixed the linear acceleration vector to be non-central for constant torque
11-12-2007: Torque - Fixed the linear acceleration vector to be non-central for constant angular acceleration
11-7-2007: Torque - Changed brake graphic from pusher to brake pad
11-6-2007: Torque - Changed background to make it seem more top-down instead of possibly side view
10-28-2007: Torque - Changed the background color of the play area
10-28-2007: Torque - Added a control panel to the introductory torque panel
10-28-2007: Torque - Removed theta = 0 indicator on the intro panel
10-28-2007: Torque - Replaced arrow graphic with bolder axis graphic (black vs gray)
10-28-2007: Torque - Made the brake block black to make it look more like a brake
10-28-2007: Torque - Increased font size for 1024x768
10-26-2007: Torque - Centered the wheel for the intro panel
10-25-2007: Torque - Fixed: Applied force radius should snap-to when releasing out of range
10-25-2007: Torque - Fixes for handle graphics
10-17-2007: Torque - Added ability to turn off "a" and "v" vectors
10-17-2007: Torque - Added Ruler check box
10-17-2007: Torque - Added Reset All button (some view-based features don't yet reset)
10-17-2007: Torque - Fixed: wheel should be r=4m for easy comparison
10-17-2007: Torque - Fixed: Changed time slider to vary from slow to fast, default time should be in the middle
10-17-2007: Torque - Fixed: Model was starting clock for reset all; multiple clocks were running simultaneously (one per module)